# ReplicateInator

./: Cargo.toml  README.md
.cargo/: config.toml
inator/: Cargo.toml
inator/src/: lib.rs
inator/src/plugins/: authentication.rs  client.rs  connection.rs  messaging.rs  mod.rs  server.rs
inator/src/ports/: mod.rs
inator/src/ports/tcp/: client.rs  mod.rs  read_writter_client.rs  reader_writer.rs  server.rs
inator/src/ports/wasm/: client.rs  mod.rs
inator/src/ports/websocket/: client.rs  mod.rs  server.rs
inator/src/ports/websocket_wasm/: client.rs
pro_macros/: Cargo.toml
pro_macros/src/: lib.rs
testing/client/: Cargo.toml
testing/client/src/: main.rs
testing/server/: Cargo.toml
testing/server/src/: main.rs
