[package]
name = "inator"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
log = { workspace = true }
ciborium = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
erased-serde = { workspace = true }
wasm-bindgen-futures = { workspace = true }
pro_macros = { path = "../pro_macros" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3.31" }
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
tungstenite = { version = "0.28.0" }

gloo-net = { workspace = true, features = ["websocket"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.48.0", features = ["sync", "rt", "macros", "time", "io-util"] }